--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
         <!-- Set the background colour of the document -->
         <style>
             body {
-                background: #0;
+                background: #d3d3d3; /* Grey background color */
                 color: #cccccc;
-                margin: 0px;
-                padding: 0px;
-                border: 0px;
+                margin: 0;
+                padding: 0;
+                border: 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                min-height: 100vh;
+                overflow: hidden;
             }
 
             canvas {
@@ -35,9 +40,9 @@
                 -webkit-interpolation-mode: nearest-neighbor;
                 -ms-touch-action: none;
                 touch-action: none;
-                margin: 0px;
-                padding: 0px;
-                border: 0px;
+                margin: 0;
+                padding: 0;
+                border: 0;
             }
             :-webkit-full-screen #canvas {
                 width: 100%;
@@ -50,9 +55,9 @@
             
             /* Custom Runner Styles */
             div.gm4html5_div_class {
-                margin: 0px;
-                padding: 0px;
-                border: 0px;
+                margin: 0;
+                padding: 0;
+                border: 0;
             }
             div.gm4html5_login {
                 padding: 20px;
@@ -96,7 +101,7 @@
             
 
             <!-- Create the canvas element the game draws to -->
-            <canvas id="canvas" width="512" height="736" >
+            <canvas id="canvas" width="512" height="736">
                 <p>Your browser doesn't support HTML5 canvas.</p>
             </canvas>
         </div>
